<resources>
    <string name="app_name">Yandex Test App</string>
    <string name="base_url">https://api.frankfurter.app/</string>
    <string name="convert_button_text">Конверитровать</string>
    <string name="to_amount_edit_text">←</string>
    <string name="from_amount_edit_text">→</string>
    <string name="from_hint_text">From:</string>
    <string name="to_hint_text">: to</string>
    <string name="error_empty">Введите значение</string>
    <string name="rate_format">%.2f</string>
    <string name="error_generic">Error has occurred: \"%s\"</string>
</resources>
