<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/main_spinner_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@id/main_from_amount_edit"
        app:layout_constraintStart_toEndOf="@id/main_from_amount_edit"
        app:layout_constraintTop_toTopOf="@id/main_from_amount_edit" />

    <Spinner
        android:id="@+id/main_spinner_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@id/main_to_amount_edit"
        app:layout_constraintEnd_toStartOf="@id/main_to_amount_edit"
        app:layout_constraintTop_toTopOf="@id/main_to_amount_edit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/from_hint_text"
        app:layout_constraintBottom_toBottomOf="@id/main_from_amount_edit"
        app:layout_constraintEnd_toStartOf="@id/main_from_amount_edit"
        app:layout_constraintTop_toTopOf="@id/main_from_amount_edit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/to_hint_text"
        app:layout_constraintBottom_toBottomOf="@id/main_to_amount_edit"
        app:layout_constraintStart_toEndOf="@id/main_to_amount_edit"
        app:layout_constraintTop_toTopOf="@id/main_to_amount_edit" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/main_from_amount_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:hint="@string/from_amount_edit_text"
        android:inputType="numberDecimal"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/main_switch_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:background="?selectableItemBackgroundBorderless"
        android:id="@+id/main_switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_swap_vert_24"
        app:layout_constraintBottom_toTopOf="@id/main_to_amount_edit"
        app:layout_constraintEnd_toEndOf="@id/main_from_amount_edit"
        app:layout_constraintStart_toStartOf="@id/main_from_amount_edit"
        app:layout_constraintTop_toBottomOf="@id/main_from_amount_edit" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/main_to_amount_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/to_amount_edit_text"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_switch_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_convert_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/convert_button_text"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
